--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     width: 30%;
     height: 10vh;
     border: 1px solid rgb(255, 255, 255);
+    padding: 5rem;
 }
 .time{
     position: absolute;
@@ -22,4 +23,5 @@ body{
     transform: translate(-50%,-50%);
     font-size: 5em;
     color: white;
+    
 }
